# mcp-chat-chronicle

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ai-models.default.yaml  ai-tasks.default.yaml  chronicle.default.yaml  pyproject.toml
.github/workflows/: ci.yml
bench/: __init__.py  __main__.py  ai-models.evaluation.default.yaml  config.py  core.py  evaluation.default.yaml  implementation.py  io.py  judge.py  loaders.py  models.py  paths.py
docs/: ai-tasks.md  development-evaluation.md
md/: agent-operating-notes.md  change-order-01.md  development-ledger.md  master-plan.md  release-1-planning-note.md
md/handoffs/: CO-1-schema-link-back-migration.md  WP-0.1-repo-bootstrap.md  WP-1.1-normalized-models-db-layer.md  WP-1.2-chatgpt-export-importer.md  WP-1.2.1-openai-split-export-compatibility.md  WP-1.3-claude-export-importer.md  WP-1.3.1-claude-real-export-content-blocks.md  WP-1.3.2-openai-codex-local-extractor.md  WP-1.3.3-claude-project-metadata-linking.md  WP-1.4-cli-ingest-stats.md  WP-1.4.1-directory-ingest-sweep.md  WP-1.5-scan-local-source-inventory.md  (+21 more)
tests/: conftest.py  test_ai_adapter.py  test_ai_cache_matrix.py  test_ai_config_matrix.py  test_ai_execution_matrix.py  test_ai_generation_precedence.py  test_ai_packaging.py  test_ai_tasks.py  test_bench.py  test_chatgpt_export.py  test_claude_code.py  test_claude_export.py  test_cli.py  test_cli_ai_tasks.py  test_cli_config_collect.py  test_cli_ingest_stats.py  test_cli_scan_local.py  test_cli_search_open.py  test_conversation_intelligence.py  test_db.py  test_openai_codex.py  test_search.py
(+132 files in other folders)
